objects/redwing__Training_Track__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Achievement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Achievement will determine the badge displayed in the Learning Trac box and header</inlineHelpText>
        <label>Achievement</label>
        <referenceTo>redwing__Achievement__c</referenceTo>
        <relationshipLabel>Learning Tracs</relationshipLabel>
        <relationshipName>Training_Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Assign_Only_Self_Registration_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only assign self-registration enabled Learning Plans when assigning/registering for a Learning Trac</inlineHelpText>
        <label>Assign Only Self-Registration Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Background_Color__c</fullName>
        <inlineHelpText>HEX Color code for the header background color (e.g. #dcdcdc, more examples in : http://www.color-hex.com/)</inlineHelpText>
        <label>Background Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Background_Image_URL__c</fullName>
        <inlineHelpText>URL for the image displayed in the Learning Trac detail header</inlineHelpText>
        <label>Background Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Default_Language_Learning_Trac__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Language Learning Trac</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>redwing__Training_Track__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>redwing__Training_Track__c.redwing__Default_Language_Learning_Trac__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>redwing__Training_Track__c</referenceTo>
        <relationshipLabel>Learning Tracs</relationshipLabel>
        <relationshipName>Training_Tracs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_all_external_accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enabling this checkbox will expose this Learning Trac to all external (Community/Portal) users</inlineHelpText>
        <label>Enable for all external users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_all_internal_users__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enabling this checkbox will expose this Learning Trac to all internal users</inlineHelpText>
        <label>Enable for all internal users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enforce_Sequence__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to require users to complete the learning activities in the specified order</inlineHelpText>
        <label>Enforce Sequence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>redwing__Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Learning_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Catalog used for grouping Learning Tracs into sections</inlineHelpText>
        <label>Group</label>
        <referenceTo>redwing__Learning_Category__c</referenceTo>
        <relationshipLabel>Learning Tracs</relationshipLabel>
        <relationshipName>Training_Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__New_Until__c</fullName>
        <inlineHelpText>Display a New ribbon in the Learning Trac until the specified date</inlineHelpText>
        <label>New Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <inlineHelpText>Number that defines the position in which this track will appear in the tracks page</inlineHelpText>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Status__c</fullName>
        <inlineHelpText>Learning Tracs are not available to end users until they are &quot;Active&quot;</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Text_Color__c</fullName>
        <inlineHelpText>HEX Color code for the header text color (e.g. #333333, more examples in : http://www.color-hex.com/)</inlineHelpText>
        <label>Text Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>Learning Trac</label>
    <listViews>
        <fullName>redwing__All</fullName>
        <columns>NAME</columns>
        <columns>redwing__Status__c</columns>
        <columns>redwing__Achievement__c</columns>
        <columns>redwing__Order__c</columns>
        <columns>redwing__Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Learning Trac Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Tracs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>redwing__LMS_Sharing__c</fullName>
        <label>LMS Sharing</label>
    </sharingReasons>
</CustomObject>